<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:background="@color/color_333333"
        android:gravity="center_vertical"
        >
        <TextView
            android:layout_marginLeft="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_title">

        </TextView>
    </LinearLayout>

    <TextView
        android:id="@+id/title_query"
        android:layout_width="192dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="56dp"
        android:gravity="center_horizontal"
        android:text="@string/title_query"
        android:textSize="22sp"
        android:textStyle="bold" />

    <Spinner
        android:id="@+id/querylist_spinner"
        android:layout_width="270dp"
        android:layout_height="45dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp"
        android:entries="@array/query_array"
        android:gravity="center_horizontal"
        android:prompt="@string/query_prompt" />

    <Button
        android:id="@+id/showresult_btn"
        android:layout_width="125dp"
        android:layout_height="40dp"
        android:layout_gravity="right"
        android:layout_marginTop="10dp"
        android:layout_marginRight="26dp"
        android:text="@string/showresult_btn"
        android:textAllCaps="false"
        android:textSize="14sp"
        android:textStyle="bold" />

    <ScrollView
        android:id="@+id/scrollview_queryresults"
        android:layout_width="260dp"
        android:layout_height="260dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp"
        android:layout_weight="0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />
    </ScrollView>

    <Button
        android:id="@+id/goCheckOutList"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_gravity="center_horizontal"
        android:text="Show Checkout List"
        android:layout_marginTop="10dp"
        android:textSize="14sp"
        android:textStyle="bold"
        android:textAllCaps="false"/>

    <Button
        android:id="@+id/goBack_btn"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/goBack_btn"
        android:textSize="14sp"
        android:textStyle="bold"
        android:textAllCaps="false"/>

</LinearLayout>
