<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:popupTheme="@style/AppTheme.PopupOverlay" />

    <TextView
        android:id="@+id/title_query"
        android:layout_width="192dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp"
        android:gravity="center_horizontal"
        android:text="@string/title_query"
        android:textSize="18sp"
        android:textStyle="bold" />

    <Spinner
        android:id="@+id/querylist_spinner"
        android:layout_width="270dp"
        android:layout_height="45dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="18dp"
        android:entries="@array/query_array"
        android:gravity="center_horizontal" />

    <Button
        android:id="@+id/showresult_btn"
        android:layout_width="110dp"
        android:layout_height="30dp"
        android:layout_gravity="right"
        android:layout_marginTop="10dp"
        android:layout_marginRight="24dp"
        android:text="@string/showresult_btn"
        android:textSize="12sp"
        android:textStyle="bold" />

    <ScrollView
        android:id="@+id/scrollview_queryresults"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp"
        android:layout_weight="0"
        android:background="#F8F5F7">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />
    </ScrollView>

    <Button
        android:id="@+id/goBack_btn"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/goBack_btn"
        android:textSize="14sp"
        android:textStyle="bold" />

</LinearLayout>
