<?xml version="1.0" encoding="utf-8"?>
        <androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:background="@color/color_333333"
                android:gravity="center_vertical"
                >
                <TextView
                    android:layout_marginLeft="20dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_title">

                </TextView>
            </LinearLayout>
            <include layout="@layout/content_main" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|end"
                android:layout_margin="@dimen/fab_margin"
                app:srcCompat="@android:drawable/ic_dialog_email" />

            <LinearLayout
                android:layout_width="401dp"
                android:layout_height="match_parent"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="120dp"
                    android:text="@string/welcome"
                    android:textSize="@dimen/textsize"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/checkoutBtn"
                    android:layout_width="210dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/layoutmargin"
                    android:width="@dimen/width_btn"
                    android:text="@string/goCheckOut_btn"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/queryBtn"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="100dp"
                    android:text="@string/goDoQuery_btn"
                    android:textStyle="bold" />

            </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
